--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         TM-Easy
-version:      0.01
-version_from: lib/TM/Easy.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                TM-Easy
+version:             0.02
+abstract:            Topic Maps, Easy Usage
+license:             ~
+author:              
+    - Robert Barta <rho@devc.at>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Test::More:                    0.47
-    TM:                            1.33
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+    TM:                            1.44
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
