--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,23 @@
 --- #YAML:1.0
-name:                TM-Easy
-version:             0.02
-abstract:            Topic Maps, Easy Usage
-license:             ~
-author:              
+name:               TM-Easy
+version:            0.03
+abstract:           Topic Maps, Easy Usage
+author:
     - Robert Barta <rho@devc.at>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0.47
-    TM:                            1.44
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0.47
+    TM:          1.44
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
